k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: purchases
spec:
  selector:
    app: react
  ports:
    - port: 8080
      targetPort: 8080
